--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,13 @@ minecraft {
     runDir = "run"
 }
 
+repositories {
+flatDir {
+ dirs 'libs'
+}
+
 dependencies {
+implementation fileTree(dir: "libs", includes: ["*.jar])
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
