--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ flatDir {
 }
 
 dependencies {
-implementation fileTree(dir: "libs", includes: ["*.jar])
+implementation fileTree(dir: "libs", includes: ["*.jar"])
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
